# nonebot-plugin-mediawiki

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  publish.yml
misc/: screenshot.py
nonebot_plugin_mediawiki/: __init__.py  config.py  config_manager.py  constants.py  data_source.py  exception.py  fakemwapi.py  mwapi.py  utilities.py  worker.py
nonebot_plugin_mediawiki/mediawiki/: LICENSE  README.md  __init__.py  constants.py  exceptions.py  mediawiki.py  mediawikipage.py  utilities.py
