[tool.poetry]
name = "nonebot-plugin-mediawiki"
version = "1.1.0-alpha.2"
description = "nonebot2 mediawiki 查询插件"
authors = ["KoishiMoe <68314080+KoishiMoe@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/KoishiMoe/nonebot-plugin-mediawiki"

[tool.poetry.dependencies]
python = ">=3.8, <4.0.0"
aiohttp = ">=3.7.4.post0"
nonebot2 = "~=2.0.0b5"
nonebot-adapter-onebot = "~=2.1.3"
beautifulsoup4 = "^4.11.1"
playwright = {version = "^1.30.0", optional = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
