[tool.poetry]
name = "nonebot-plugin-mediawiki"
version = "1.1.1"
description = "nonebot2 mediawiki 查询插件"
authors = ["KoishiMoe <68314080+KoishiMoe@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/KoishiMoe/nonebot-plugin-mediawiki"

[tool.poetry.dependencies]
python = ">=3.9, <4.0.0"
aiohttp = ">=3.7.4.post0"
nonebot2 = "~=2.3.2"
nonebot-adapter-onebot = "~=2.4.4"
beautifulsoup4 = "^4.12.3"
playwright = {version = "^1.45.1", optional = true}

[tool.poetry.extras]
shot = ["playwright"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
