[tool.poetry]
name = "nonebot-plugin-mediawiki"
version = "1.2.2-beta.4"
description = "nonebot2 mediawiki 查询插件"
authors = ["KoishiMoe <68314080+KoishiMoe@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/KoishiMoe/nonebot-plugin-mediawiki"

[tool.poetry.dependencies]
python = ">=3.9, <4.0.0"
aiohttp = ">=3.10.11, <4.0"
nonebot2 = ">=2.3.2, <3.0"
nonebot-adapter-onebot = ">=2.4.4, <3.0"
beautifulsoup4 = ">=4.12.3, <5.0"
playwright = {version = ">=1.45.1, <2.0", optional = true}

[tool.poetry.extras]
shot = ["playwright"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
